apps/1-podinfo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-podinfo
  namespace: apps
  labels:
    app: frontend-podinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-podinfo
      version: v1
  template:
    metadata:
      labels:
        app: frontend-podinfo
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9898"
        sidecar.istio.io/inject: true
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: podinfo
          image: "stefanprodan/podinfo:3.3.1"
          imagePullPolicy: IfNotPresent
          command:
            - ./podinfo
            - --port=9898
            - --port-metrics=9797
            - --grpc-port=9999
            - --grpc-service-name=podinfo
            - --level=info
            - --random-delay=false
            - --random-error=false
          ports:
            - name: http
              containerPort: 9898
              protocol: TCP
            - name: http-metrics
              containerPort: 9797
              protocol: TCP
            - name: grpc
              containerPort: 9999
              protocol: TCP
          livenessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/healthz
            initialDelaySeconds: 1
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/readyz
            initialDelaySeconds: 1
            timeoutSeconds: 5
          volumeMounts:
          - name: data
            mountPath: /data
          resources:
            limits: null
            requests:
              cpu: 1m
              memory: 16Mi
      volumes:
      - name: data
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-podinfo-v1
  namespace: apps
  labels:
    app: backend-podinfo-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-podinfo
      version: v1
  template:
    metadata:
      labels:
        app: backend-podinfo
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9898"
        sidecar.istio.io/inject: true
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: podinfo
          image: "stefanprodan/podinfo:3.3.1"
          imagePullPolicy: IfNotPresent
          command:
            - ./podinfo
            - --port=9898
            - --port-metrics=9797
            - --grpc-port=9999
            - --grpc-service-name=podinfo
            - --level=info
            - --random-delay=false
            - --random-error=false
          ports:
            - name: http
              containerPort: 9898
              protocol: TCP
            - name: http-metrics
              containerPort: 9797
              protocol: TCP
            - name: grpc
              containerPort: 9999
              protocol: TCP
          livenessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/healthz
            initialDelaySeconds: 1
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/readyz
            initialDelaySeconds: 1
            timeoutSeconds: 5
          volumeMounts:
          - name: data
            mountPath: /data
          resources:
            limits: null
            requests:
              cpu: 1m
              memory: 16Mi
      volumes:
      - name: data
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-podinfo-v2
  namespace: apps
  labels:
    app: backend-podinfo-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-podinfo
      version: v2
  template:
    metadata:
      labels:
        app: backend-podinfo
        version: v2
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9898"
        sidecar.istio.io/inject: true
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: podinfo
          image: "stefanprodan/podinfo:3.3.1"
          imagePullPolicy: IfNotPresent
          command:
            - ./podinfo
            - --port=9898
            - --port-metrics=9797
            - --grpc-port=9999
            - --grpc-service-name=podinfo
            - --level=info
            - --random-delay=false
            - --random-error=false
          ports:
            - name: http
              containerPort: 9898
              protocol: TCP
            - name: http-metrics
              containerPort: 9797
              protocol: TCP
            - name: grpc
              containerPort: 9999
              protocol: TCP
          livenessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/healthz
            initialDelaySeconds: 1
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/readyz
            initialDelaySeconds: 1
            timeoutSeconds: 5
          volumeMounts:
          - name: data
            mountPath: /data
          resources:
            limits: null
            requests:
              cpu: 1m
              memory: 16Mi
      volumes:
      - name: data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-podinfo
  namespace: apps
  labels:
    app: frontend-podinfo
spec:
  ports:
    - port: 9898
      targetPort: http
      protocol: TCP
      name: http
    - port: 9999
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app: frontend-podinfo
---
apiVersion: v1
kind: Service
metadata:
  name: backend-podinfo-v1
  namespace: apps
  labels:
    app: backend-podinfo
    version: v1
spec:
  ports:
    - port: 9898
      targetPort: http
      protocol: TCP
      name: http
    - port: 9999
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app: backend-podinfo
    version: v1
---
apiVersion: v1
kind: Service
metadata:
  name: backend-podinfo-v2
  namespace: apps
  labels:
    app: backend-podinfo
    version: v2
spec:
  ports:
    - port: 9898
      targetPort: http
      protocol: TCP
      name: http
    - port: 9999
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app: backend-podinfo
    version: v2
