apps/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-podinfo
spec:
  host: frontend-podinfo
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend-podinfo
spec:
  host: backend-podinfo
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
